fixed top spacing

--- a/src/components/tabs/tab-panel.module.scss
+++ b/src/components/tabs/tab-panel.module.scss
@@ -1,3 +1,3 @@
 .tab-panel {
-  margin-top: 1rem;
+  margin-top: 15px;
 }
